; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_au1550_ac97.c_ld2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_au1550_ac97.c_ld2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ld2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ld2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp uge i32 %4, 65536
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = lshr i32 %7, 16
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %3, align 4
  %10 = add i32 %9, 16
  store i32 %10, i32* %3, align 4
  br label %11

11:                                               ; preds = %6, %1
  %12 = load i32, i32* %2, align 4
  %13 = icmp uge i32 %12, 256
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i32, i32* %2, align 4
  %16 = lshr i32 %15, 8
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %3, align 4
  %18 = add i32 %17, 8
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %14, %11
  %20 = load i32, i32* %2, align 4
  %21 = icmp uge i32 %20, 16
  br i1 %21, label %22, label %27

22:                                               ; preds = %19
  %23 = load i32, i32* %2, align 4
  %24 = lshr i32 %23, 4
  store i32 %24, i32* %2, align 4
  %25 = load i32, i32* %3, align 4
  %26 = add i32 %25, 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %19
  %28 = load i32, i32* %2, align 4
  %29 = icmp uge i32 %28, 4
  br i1 %29, label %30, label %35

30:                                               ; preds = %27
  %31 = load i32, i32* %2, align 4
  %32 = lshr i32 %31, 2
  store i32 %32, i32* %2, align 4
  %33 = load i32, i32* %3, align 4
  %34 = add i32 %33, 2
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %30, %27
  %36 = load i32, i32* %2, align 4
  %37 = icmp uge i32 %36, 2
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32, i32* %3, align 4
  %40 = add i32 %39, 1
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %38, %35
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
